assets/css/style.css
:root{
  --color-primary:#1e88e5;
  --color-primary-trans: RGBA(30,136,229,.25);
  --color-success: #0a5;
  --color-danger: #E00000;
}

h1, h2, h3, h4, h5, h6, .button{
  font-family: 'Montserrat', sans-serif;
}

h1, h2, h3, h4, h5, h6{
  color: var(--color-primary);
}

h1, h2{
  font-weight: 300;
}

h3, h4, h5, h6, .button{
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 2px;
}

/*-------------------Timepicker Overrides-------------------*/
.timepicker-digital-display{ background-color: var(--color-primary); }
.timepicker__day--selected, .timepicker__day--selected:hover, .timepicker--focused .timepicker__day--selected { background-color: var(--color-primary);}
.timepicker__close { color: var(--color-primary) !important;}
.timepicker__today { color: var(--color-primary) !important;}
.timepicker-tick:hover { background: var(--color-primary-trans) !important; }
.timepicker-canvas line { stroke: var(--color-primary) !important; }
.timepicker-canvas-bearing { fill: var(--color-primary) !important; }
.timepicker-canvas-bg { fill: var(--color-primary) !important; }
.timepicker-footer button { color: var(--color-primary); }

/*-------------------Modal Overrides-------------------*/
.modal-header{
  margin-top: 0;
  padding: 1em;
}

/*-------------------Collection Overrides-------------------*/

.collection-header, .modal-header{
  position: relative;
  background: #ccc;  
  background: -webkit-linear-gradient(120deg, #fff, #eee); 
  background: linear-gradient(120deg, #fff, #eee);
}

.collection-header::after, .modal-header::after{
  position: absolute;
  left: 0;
  bottom: 0;
  content:' ';
  width: 100%;
  height: .25em;
  background: var(--color-primary);  
  background: -webkit-linear-gradient(120deg, var(--color-primary), #eee); 
  background: linear-gradient(120deg, var(--color-primary), #eee); 
}

.collection-item.collection-reset{
  padding: 2em;
  margin: 0;
}

/*-------------------Input Overrides-------------------*/
/* label color */
.form .input-field label { color: #000; }

/* label focus color */
.form .input-field input[type=text]:focus+label,
.form .input-field input[type=number]:focus+label { 
  color: var(--color-primary); 
}

/* label underline focus color */
.form .input-field input[type=text]:focus, 
.form .input-field input[type=number]:focus  {
  border-bottom: 1px solid var(--color-primary);
  box-shadow: 0 1px 0 0 var(--color-primary);
}

/* valid color */
.form .input-field input[type=text].valid
.form .input-field input[type=number].valid {
  border-bottom: 1px solid var(--color-success);
  box-shadow: 0 1px 0 0 var(--color-success);
}

/* invalid color */
.form .input-field input[type=text].invalid,
.form .input-field input[type=number].invalid {
  border-bottom: 1px solid var(--color-danger);
  box-shadow: 0 1px 0 0 var(--color-danger);
}

/* icon prefix focus color */
.form .input-field .prefix.active { color: var(--color-primary); }

/*-------------------Button Overrides-------------------*/

.form .button{
  background: var(--color-primary);
  box-shadow: none;
  border-radius: 0;
}

.train-delete, .train-edit{
  color: rgba(0,0,0,.4);
  transition: color .5s linear;
}

.train-delete:hover, .train-edit:hover{
  color: rgba(0,0,0,1);
}

/*-------------------Table Overrides-------------------*/
tr:last-child{
  border-bottom: none;
}

.table-col-sm{
  max-width: 30px;
}

/*-------------------Clearfix-------------------*/
.clearfix {
  *zoom: 1;
}
.clearfix:before, 
.clearfix:after {
  content: '';
  display: table;
}
.clearfix:after {
  clear: both;
}

